[gd_scene load_steps=2 format=3 uid="uid://q1d7iycpesjo"]

[ext_resource type="Script" uid="uid://b7ll6yawes4do" path="res://assets/Prefab_kinda/control_pause.gd" id="1_n0egk"]

[node name="Pause_Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n0egk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.3529412)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = 76.0
offset_right = 78.0
offset_bottom = 389.0
grow_horizontal = 2
pivot_offset = Vector2(78, 0)
alignment = 1

[node name="Resume" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit_Game")
focus_neighbor_bottom = NodePath("../Quit_Menu")
text = "Resume"

[node name="Quit_Menu" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../Quit_Game")
text = "Quit To Main Menu"

[node name="Quit_Game" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit_Menu")
focus_neighbor_bottom = NodePath("../Resume")
text = "Quit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="button_down" from="CanvasLayer/VBoxContainer/Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Quit_Menu" to="." method="_on_quit_menu_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Quit_Game" to="." method="_on_quit_game_button_down"]
